HEADER_FILES = \
    ABRTException.h \
    abrtlib.h \
    abrt_types.h \
    abrt_xmlrpc.h \
    Action.h \
    Analyzer.h \
    CommLayerInner.h \
    CrashTypes.h \
    Database.h \
    DBusCommon.h \
    DebugDump.h \
    Observer.h \
    Plugin.h \
    Reporter.h \
    xfuncs.h

lib_includedir=$(includedir)/abrt/
lib_include_HEADERS = $(HEADER_FILES)
