HEADER_FILES = \
    abrt_exception.h \
    abrtlib.h \
    abrt_types.h \
    abrt_xmlrpc.h \
    action.h \
    analyzer.h \
    comm_layer_inner.h \
    crash_types.h \
    database.h \
    dbus_common.h \
    debug_dump.h \
    observer.h \
    plugin.h \
    reporter.h \
    xfuncs.h

lib_includedir=$(includedir)/abrt/
lib_include_HEADERS = $(HEADER_FILES)
